# HAZAMA

./: .env.example  .gitignore  CONTRIBUTING.md  FloodArchive.csv  GEMINI.md  README.md  README_code.md  Untitled.ipynb  Untitled1.ipynb  gee.ipynb  matched_events.json  pyproject.toml  real_test_cdse.py  run_inference.ipynb  software_requirements_specification.md  task.md  xee.ipynb
.github/workflows/: ci.yml
code/models/training_demo/: config.json  model.pt
code/models/training_demo/checkpoint/: epoch=3-step=1576.ckpt
code/models/training_demo/lightning_logs/version_1/: hparams.yaml
code/models/training_demo/lightning_logs/version_2/: metrics.csv
demos/: sentinel_api.ipynb
docs/: HAZAMA.drawio  assignments.md  spec.md  task_assignment.md
ml4floods/data/worldfloods/: dataset.py
ml4floods/models/: dataset_setup.py  worldfloods_model.py
ml4floods/models/utils/: metrics.py
ml4floods/preprocess/: transformations.py
models/training_demo/: config.json  model.pt
models/training_demo/checkpoint/: epoch=3-step=1576.ckpt
models/training_demo/lightning_logs/version_0/: events.out.tfevents.1753372056.19b24fb92c7e.681.0  hparams.yaml
poster&presentation/: 游常心_基於合成孔徑雷達與多源數據應用之歷史洪水範圍重建.docx
poster&presentation/presentation/: 基於合成孔徑雷達與多源數據應用之歷史洪水範圍重建_游常心.pptx
predict/: EMSR257_01MANDRA_GRA_v2_observed_event_a_prediction.tif  EMSR286_09ITUANGOSOUTH_DEL_MONIT02_v1_observed_event_a_prediction.tif  EMSR333_13TORRECOLONNASPERONE_DEL_MONIT01_v2_observed_event_a_prediction.tif
src/HAZAMA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/search/: fetch_CDSE.py
tests/: real_test_cdse.py  test_cdse_final.py  test_cdse_integration.py  test_cdse_logic.py  test_test.py
