[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "HAZAMA"
version = "0.1.0"
authors = [
  { name="Your Name", email="your@email.com" }, # TODO: Update with actual author info
]
description = "Flood Event Intelligent Information Acquisition System"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.26.0",
    "xarray>=0.26.0",
    "rioxarray>=0.14.0",
    "matplotlib",
    "pystac-client>=0.7.0",
    "earthengine-api>=0.1.350",
    "pandas>=2.0.0",
    "geopandas>=0.14.0",
    "python-dotenv", # API Keys
]

[project.optional-dependencies]
dev = [
    "uv",
    "ruff>=0.1.0",
    "ipykernel",
    "pre-commit",
]
test = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort (自動排序 imports)
    "UP",  # pyupgrade (強迫使用新語法)
    "N",   # pep8-naming (規範變數命名)
    "B",   # flake8-bugbear (檢查邏輯坑)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]